# codec

./: .gitmodules  CMakeLists.txt  Makefile  cgo_source.go  cgo_source.go.in  go.mod
benchmarks/: CMakeLists.txt
cmake/: merge_libs.sh
scripts/: merge_libs.sh  merge_libs_auto.sh
tests/: CMakeLists.txt  test_framework.c
